[gd_scene load_steps=5 format=3 uid="uid://dhn33nmrsfedi"]

[ext_resource type="Script" uid="uid://f71uy64lkwio" path="res://button_template.gd" id="1_7jaak"]
[ext_resource type="StyleBox" uid="uid://5vr61ivpd8y5" path="res://Scenes/UI/1.tres" id="1_skh7n"]
[ext_resource type="StyleBox" uid="uid://kg1dlbqrewcu" path="res://Scenes/UI/2.tres" id="1_ws65y"]
[ext_resource type="StyleBox" uid="uid://chybhl8lm5sx7" path="res://Scenes/UI/3.tres" id="2_qfs4o"]

[node name="Button_Template" type="Button"]
custom_minimum_size = Vector2(0, 70)
size_flags_vertical = 0
theme_override_styles/hover = ExtResource("1_ws65y")
theme_override_styles/pressed = ExtResource("2_qfs4o")
theme_override_styles/normal = ExtResource("1_skh7n")
script = ExtResource("1_7jaak")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_buttonPressed"]
